# actix-web-example

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2020-05-03-131537_create_accounts/: down.sql  up.sql
src/: account_requests.rs  db.rs  main.rs  models.rs  schema.rs
src/account_requests/: db.rs
src/account_requests/db/: models.rs  schema.rs
static/: chpass.html  delacc.html  login.html  newacc.html  style.css  util.js
templates/: welcome.html
