[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["Srinivasa <m.srinivasa1234@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = { version = "1.0.0", features = ["mysql","r2d2"] }
dotenv = "0.15.0"
serde = "1.0.106"
sha2 = "0.8.1"
tera = "1.2.0"
actix-files = "0.2.1"
