[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["Srinivasa <m.srinivasa1234@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.5", features = ["mysql","r2d2"] }
dotenv = "0.15.0"
serde = "1.0.115"
sha2 = "0.9.1"
tera = "1.5.0"
actix-files = "0.2.2"
actix-identity = "0.2.1"
rand = "0.7.3"
bytes = "0.5.6"
